[package]
name = "htoo"
version = "0.1.0"
edition = "2024"

[dependencies]
bitfield-struct = "0.10.1"
bitflags = "2.9.0"
bytes = "1.10.1"
hpack = "0.3.0"
nom = "8.0.0"
zerocopy = {version = "0.8.23", features = ["derive"]}

[features]
default=[]  # Core HTTP/2
rfc7838=[]  # ALTSVC Extension
rfc8336=[]  # ORIGIN Extension